loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:1: error: not found: value estsurBiscuit
while (estsurBiscuit==false) {avance();} 
       ^